<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".api.ui.GamesEntry">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/freetogame"
        android:textAlignment="center"
        android:textColor="#EDEBEB"
        android:textSize="35sp"
        android:layout_marginVertical="8dp"
        android:textStyle="italic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAllGames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/button_radius"
        android:text="@string/all_games"
        android:textColor="#EDEBEB"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBrowserGames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius_2"
            android:text="@string/browser_games"
            android:textColor="#EDEBEB"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPCGames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius"
            android:text="@string/only_pc_games"
            android:textColor="#EDEBEB"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnShooter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius_2"
            android:text="@string/shooter"
            android:textColor="#EDEBEB"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRacing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius"
            android:text="@string/racing"
            android:textColor="#EDEBEB"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSuperhero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius_2"
            android:text="@string/superhero"
            android:textColor="#EDEBEB"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFlight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius"
            android:text="Flight"
            android:textColor="#EDEBEB"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAnime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius_2"
            android:text="@string/anime"
            android:textColor="#EDEBEB"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnScifi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius"
            android:text="@string/sci_fi"
            android:textColor="#EDEBEB"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnByReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius"
            android:text="@string/release_date"
            android:textColor="#EDEBEB"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAlphabetically"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_radius_2"
            android:text="@string/alphabetically"
            android:textColor="#EDEBEB"
            android:textSize="15sp" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/button_radius"
        android:text="@string/favorites"
        android:textColor="#EDEBEB"
        android:textSize="15sp" />

</LinearLayout>