<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#414141"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".api.ui.GamesDetails">

    <ImageView
        android:id="@+id/imageViewGameFD"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginVertical="10dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/game_image" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSaveGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/floatingbutton"
            android:src="@drawable/ic_baseline_save_24" />



    <TextView
        android:id="@+id/textViewTitleDetails"
        android:textColor="#FF6D00"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewIdDetails"
            android:textColor="#FFAB00"
            android:textSize="19sp"
            android:textStyle="normal"
            android:gravity="center"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/id" />



        <TextView
            android:id="@+id/textViewUrlDetails"
            android:textColor="#2962FF"
            android:textSize="19sp"
            android:textStyle="italic"
            android:gravity="center"
            android:padding="8dp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/url" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewPlatformDetails"
            android:textColor="#AEEA00"
            android:textSize="19sp"
            android:textStyle="normal"
            android:gravity="center"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/platform" />



        <TextView
            android:id="@+id/textViewReleaseDateDetails"
            android:textColor="#FFD600"
            android:textSize="19sp"
            android:textStyle="italic"
            android:gravity="center"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Release Date" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewPublisherDetails"
            android:textColor="#2962FF"
            android:textSize="19sp"
            android:textStyle="normal"
            android:gravity="center"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/publisher" />



        <TextView
            android:id="@+id/textViewDeveloperDetails"
            android:textColor="#FFD600"
            android:textSize="19sp"
            android:textStyle="italic"
            android:gravity="center"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/developer" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvShortDescription"
        android:text="@string/short_description"
        android:padding="8dp"
        android:textSize="19sp"
        android:textStyle="italic"
        android:textColor="#FFD600"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>